--- a/docker-workshop-1-build/website/index.html
+++ b/docker-workshop-1-build/website/index.html
@@ -15,9 +15,9 @@
         </h2>
 
         <div class="logo"></div>
-
         <div class="agenda">
 
+            <p>Kursmaterial: <a href="https://github.com/ekstend/docker-workshop" target="_blank">Github-Link</a></p>
             <ul>
                 <li>Was ist Docker?</li>
                 <li>Images, Containers und die Registry</li>
